tests/fixtures/invalid/str_rshift_none.py
# Cannot right shift Str and None
x: str = "hello" >> None
